--- a/projects/experimental/components/button/button.style.less
+++ b/projects/experimental/components/button/button.style.less
@@ -2,18 +2,15 @@
 
 // TODO: Change to [tuiButton] in 4.0
 [tuiButtonNew] {
-    .clearbtn();
-    position: relative;
-    display: inline-flex;
+    .button-base();
     height: var(--t-size);
-    align-items: center;
     justify-content: center;
-    white-space: nowrap;
     border-radius: var(--t-radius);
     padding: var(--t-padding);
-    overflow: hidden;
     user-select: none;
     cursor: pointer;
+
+    --t-gap: 0.125rem;
 
     > .t-loader {
         .center-all();
@@ -27,8 +24,8 @@
         --t-size: var(--tui-height-xs);
         --t-radius: var(--tui-radius-xs);
         --t-padding: 0 0.375rem;
+        --t-margin: -0.125rem;
         font: var(--tui-font-text-s);
-        gap: 0.25rem;
 
         tui-svg,
         tui-icon,
@@ -41,8 +38,8 @@
         --t-size: var(--tui-height-s);
         --t-radius: var(--tui-radius-s);
         --t-padding: 0 0.625rem;
+        --t-margin: -0.125rem;
         font: var(--tui-font-text-s);
-        gap: 0.25rem;
 
         tui-svg,
         tui-icon,
@@ -55,9 +52,9 @@
         --t-size: var(--tui-height-m);
         --t-radius: var(--tui-radius-m);
         --t-padding: 0 1rem;
+        --t-margin: -0.375rem;
         font: var(--tui-font-text-m);
         font-weight: bold;
-        gap: 0.5rem;
 
         &:after {
             margin-inline-start: 0.375rem;
@@ -68,9 +65,10 @@
         --t-size: var(--tui-height-l);
         --t-radius: var(--tui-radius-l);
         --t-padding: 0 1.25rem;
+        --t-gap: 0.25rem;
+        --t-margin: -0.25rem;
         font: var(--tui-font-text-m);
         font-weight: bold;
-        gap: 0.5rem;
 
         &:after {
             margin-inline-start: 0.25rem;
@@ -95,8 +93,6 @@
 
     &[tuiIcons]:after {
         font-size: 1rem;
-        margin-inline-start: 0.125rem;
-        margin-inline-end: -0.125rem;
     }
 }
 
@@ -104,5 +100,6 @@
     width: var(--t-size);
     font-size: 0;
     padding: 0;
-    gap: 0;
+
+    --t-gap: 0;
 }
